<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:enabled="true"
            android:checkableBehavior="none">
    <item
        android:id="@+id/bottom_nav_star"
        android:checked="false"
        android:checkable="true"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/bottom_nav_item_1"/>

    <item
        android:id="@+id/bottom_nav_coment"
        android:checked="false"
        android:checkable="true"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/bottom_nav_item_2"/>

        <item
            android:id="@+id/bottom_nav_new_coment"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/bottom_nav_item_3" />
    </group>
</menu>