<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/navigation_background"
    android:padding="10dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        >

        <TextView
            android:id="@+id/coment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/nav_bottom_comentarios"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#E9E9E9"
        app:cardCornerRadius="5dp"
        app:cardElevation="0px"
        app:contentPadding="20dp"
        android:foreground="?attr/selectableItemBackground">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/coment_location_coment"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/coment_location_coment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/coment_null_1"
                app:layout_constraintEnd_toEndOf="@+id/space"
                app:layout_constraintStart_toStartOf="@+id/space"
                app:layout_constraintTop_toBottomOf="@+id/space2" />


            <Space
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonDell"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textViewAddComent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autoLink="all"
                android:text="@string/coment_null_2"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>