<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08000000"
    tools:context=".EditScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/chefe" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/navigation_background"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:layout_editor_absoluteX="206dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="10">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="30dp"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                <EditText
                    android:id="@+id/editText_matricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:hint="@string/string_matricula"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/darker_gray" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="10">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="30dp"
                    app:srcCompat="@drawable/ic_key" />

                <EditText
                    android:id="@+id/editText_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ems="10"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/string_senha"
                    android:inputType="textPassword" />
            </TableRow>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/string_entrar"
        android:textSize="20sp"
        android:translationY="-15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>